# Python-Projeto

./: .env  README.md  chat.py  database.py  main.py  pyproject.toml  server.py
app/: config.py  models.py
app/models/: __init__.py  gemini_response.py  prompt_input.py
app/routes/: __init__.py  chat.py  ui.py
app/services/: __init__.py  gemini_client.py
frontend/: index.html
main/: main.py
main/app/: config.py  models.py
routes/: chat.py
services/: gemini_client.py
tests/: test_chat.py
