[tool.poetry]
name = "pyproject-toml"
version = "2.1.4"
description = "."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "."}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry.packages]
include = "pyproject"

[tool.poetry.group.dev.dependencies]
poetry = "init"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
