[project]
name = "meu-projeto-py"
version = "0.1.0"
description = "fastapi"
google-generativeai = "^0.3.0"
authors = [
    {name = "MateusVenancioDeus", email = "162513571+MateusVenancioDeus@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
